# match_3

./: .gitignore  LICENSE  README.md  makefile  makefile_ems
.github/workflows/: main.yml
doc/: licenses.md  notes  old_todo.md  todo.md  todo.txt
doc/core/: CMakeLists.txt  todo.txt
doc/cover/: cover.xcf
doc/formats/: common.txt
hooks/: post_assets_copy.sh  post_run.sh  pre_run.sh  sync.sh
html/: index.html
include/: Board.hpp  Engine.hpp  GameData.hpp
src/: Board.cpp  Board.hpp  Board_check.cpp  Board_fill.cpp  Board_move.cpp  Board_render.cpp  Board_score.cpp  Board_selection.cpp  Board_swap.cpp  Board_tick.cpp  Engine.cpp  Engine_events.cpp  Engine_render.cpp  Engine_tick.cpp  main.cpp  scenes.cpp
src/config/: config.cpp  controls.hpp  game.hpp  graphics.hpp  keyboard.hpp  skills.hpp
src/core/: config.hpp  core.cpp  core.hpp  hooks.cpp  hooks.hpp  init.cpp  init.hpp  main.cpp  scene.cpp  scene.hpp  version.hpp
src/game/: activate_falling_tiles.cpp  apply_tile_animation.cpp  apply_tile_fall_anim.cpp  apply_tile_move_anim.cpp  apply_tile_skill_anim.cpp  are_similar.cpp  board.hpp  can_create_tile.cpp  can_tile_fall.cpp  colors.hpp  count_falling_tiles.cpp  create_tile.cpp  detect_lines.cpp  detect_special_sequence.cpp  equeue_move.cpp  events.cpp  falling_tiles.hpp  finish_line_animation.cpp  fonts.cpp  fonts.hpp  game.hpp  get_line_animation_progress.cpp  get_tile.cpp  get_tile_line_progress.cpp  get_tile_pos.cpp  handle_event.cpp  init.cpp  init_board.cpp  is_tile_empty.cpp  is_tile_falling.cpp  is_tile_in_line.cpp  is_tile_in_use.cpp  is_tile_locked.cpp  is_tile_moving.cpp  keyboard.cpp  keyboard.hpp  line.hpp  line_animation.hpp  line_sequence.hpp  mouse.cpp  (+22 more)
src/game/skills/: beam.cpp  beam.hpp
src/storage/: config.hpp  mapf.cpp  read.cpp  utils.hpp  write.cpp
src/utils/: font_cache.hpp  geometry.cpp  geometry.hpp  id_type.hpp  pi.hpp  point.hpp  random.cpp  random.hpp  render_circle.cpp  render_circle.hpp  trandom.hpp  types.hpp
src/utils/font_cache/: cache_clear.cpp  cache_destroy_entry.cpp  cache_trim.cpp  cache_trim_one.cpp  create_cache.cpp  create_font_cache.cpp  destroy_cache.cpp  find_font.cpp  get_font.cpp  internal.hpp  load_font.cpp
